fix missing border

--- a/ckanext/odsh/public/odsh.css
+++ b/ckanext/odsh/public/odsh.css
@@ -100,6 +100,13 @@ h3{
     margin-bottom: 0px;
 }
 
+.with-bottom-line
+{
+    border-bottom: 2px solid #dbdbdb;
+    margin-bottom: 10px;
+}
+
+
 .search-form .control-order-by select {
     width: 225px;
     margin: 0;
